--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,7 @@
             details below:
           </p>
           <ul>
-            <li>Email: <strong>info@yourdomain.com</strong></li>
-            <li>Phone: (555) 123-4567</li>
-            <li>Address: 123 Business St, Suite 100, Your City, ST 12345</li>
+            <li>Email: <strong>contact@zun0.net</strong></li>
           </ul>
 
           <!-- Optional simple contact form (non-functional unless you add backend) -->
